change api test path from append type to config type
